--- a/web/html/index.html
+++ b/web/html/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>My Rust + Webpack project!</title>
   </head>
   <body>
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
