Use typescript, restructure

--- a/web/model_viewer/model_viewer.html
+++ b/web/model_viewer/model_viewer.html
@@ -5,6 +5,6 @@
     <title>My Rust + Webpack project!</title>
   </head>
   <body>
-    <script src="js/index.js"></script>
+    <script src="./model_viewer.ts"></script>
   </body>
 </html>
