--- a/web/translation_compare/translation_compare.html
+++ b/web/translation_compare/translation_compare.html
@@ -5,6 +5,6 @@
     <title>My Rust + Webpack project!</title>
   </head>
   <body>
-    <script src="js/index.js"></script>
+    <script src="./translation_compare.ts"></script>
   </body>
 </html>
