Implement treeview part 1

--- a/client/explorer/explorer.html
+++ b/client/explorer/explorer.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>My Rust + Webpack project!</title>
+
+    <script src="./explorer.ts"></script>
+    <link rel="stylesheet" href="./explorer.less"></link>
   </head>
   <body>
-    <script src="./explorer.ts"></script>
   </body>
 </html>
